--- a/CSS_Code/Index_Style_CSS.css
+++ b/CSS_Code/Index_Style_CSS.css
@@ -7,16 +7,22 @@
 
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: KaiTi;
     line-height: 1.6;
     background-color: #f8f8f8;
     margin: 0;
     padding: 0;
 }
 
+section {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
 .container {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 38.2% 61.8%;
     gap: 20px;
     margin: 0 auto;
 }
@@ -32,7 +38,7 @@ body {
 }
 
 p {
-    font-family: KaiTi_GB2312;
+    font-family: KaiTi;
 }
 
 footer {
